Update cv and add content

--- a/open/index.html
+++ b/open/index.html
@@ -14,7 +14,7 @@
      <link rel="shortcut icon" href="../media/favicon.ico">
                                    
 <script type="text/javascript">
-/*
+
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-13244504-2']);
   _gaq.push(['_setDomainName', 'stefanosabatini.eu']);
@@ -25,7 +25,7 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-*/
+
 </script>
 
 <style>
@@ -78,6 +78,12 @@ height: 140px;
           <h2>Rete Gratuita</h2>
           <p>Obtained wifi hotspots positions and redistributed as open data.</p>
           <p><a class="btn btn-default" href="retegratuita/index.html">Go &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img class="img140" src="genoaport.jpg">
+          <h2>Genoa Port Stats</h2>
+          <p>Transforming port traffic statistics. (Opens in a new window)</p>
+          <p><a class="btn btn-default" href="http://stefanosabatini.eu/GenoaPortStats/">Go &raquo;</a></p>
         </div>
        </div>
       
