--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
                                    
 <script type="text/javascript">
-/*
+
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-13244504-2']);
   _gaq.push(['_setDomainName', 'stefanosabatini.eu']);
@@ -23,7 +23,7 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-*/
+
 </script>
 
 <style>
@@ -65,8 +65,16 @@ height: 140px;
 		  <ul>
 			  <li><a href="open/index.html">Open Data</a></li>
 			  <li><a href="open/nuraghe/index.html">Open Nuraghe</a></li>
+			  <li><a href="open/portstats.html">Open Nuraghe</a></li>
+			  <li><a href="https://github.com/sabas/" target="_blank">Github profile</a></li>
 		  </ul>
-
+		  <h1>Currently online websites</h1>
+		  <ul>
+			  <li><a href="#" onclick="javascript:alert('No need to click the link, you\'re already on it!')">This one :-)</a></li>
+			  <li><a href="http://www.carlodamico.com/">carlodamico.com</a></li>
+			  <li><a href="http://www.sarchittu.org/">sarchittu.org</a></li>
+			  <li><a href="http://map.genova.it/">map.genova.it</a></li>
+		  </ul>
         </div>
       
       <footer>
