--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@ height: 140px;
 		  <ul>
 			  <li><a href="open/index.html">Open Data</a></li>
 			  <li><a href="open/nuraghe/index.html">Open Nuraghe</a></li>
-			  <li><a href="open/portstats.html">Open Nuraghe</a></li>
+			  <li><a href="http://stefanosabatini.eu/GenoaPortStats/">Genoa Port Stats</a></li>
 			  <li><a href="https://github.com/sabas/" target="_blank">Github profile</a></li>
 		  </ul>
 		  <h1>Currently online websites</h1>
