--- a/about.html
+++ b/about.html
@@ -63,18 +63,16 @@ height: 140px;
       <div class="row">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
-<script src="media/map.js"></script>
+<script src="script/map.js"></script>
 <div id="map" style="float:right; width:50%; height:50%; min-height:300px;"></div>
 
 <script>
-var map=initMap(44.4005,8.9523,13);
-putMarker(map,'',44.4122824, 8.9259195,"I work here");
+var map=initmap(44.4005,8.9523,13);
 </script>
 
    <h2>Who am I?</h2>
 
 <p>My name is Stefano Sabatini, I was born in 1988 in Genoa, where I live and work.</p>
-<p>I'm going to graduate in Computer Science at the University of Genoa and I'm working at Coscon Italy SRL.</p>
  
 <h2>Curriculum</h2>
 
@@ -82,13 +80,11 @@ putMarker(map,'',44.4122824, 8.9259195,"I work here");
 
 <p>I am employed as BPS at <a href="http://www.coscon.it/">Coscon Italy SRL</a>.<p>
 	
-	<p>Websites..</p>
-
       </div>
       
       <footer>
         <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2013 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
+        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
       </footer>
     </div>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
