--- a/open/index.html
+++ b/open/index.html
@@ -65,7 +65,6 @@ height: 140px;
        <div class="row">
 <h1>Open</h1>
 <p>Here are some demo projects involving open data.</p>
-      <!-- Three columns of text below the carousel -->
       <div class="row center">
         <div class="col-lg-4">
           <img class="img140" src="carsharing/carsharing.png">
@@ -89,10 +88,10 @@ height: 140px;
       
       <footer>
         <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2013 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
+        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
       </footer>
     </div>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="vendor/js/bootstrap.min.js"></script>	  
+    <script src="../vendor/js/bootstrap.min.js"></script>	  
   </body>
 </html>
