--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,8 @@ height: 140px;
 		  <ul>
 			  <li><a href="open/index.html">Open Data</a></li>
 			  <li><a href="open/nuraghe/index.html">Open Nuraghe</a></li>
-			  <li><a href="http://stefanosabatini.eu/GenoaPortStats/">Genoa Port Stats</a></li>
-			  <li><a href="https://github.com/sabas/" target="_blank">Github profile</a></li>
+			  <li><a href="http://stefanosabatini.eu/GenoaPortStats/" target="_blank">Genoa Port Stats (new window)</a></li>
+			  <li><a href="https://github.com/sabas/" target="_blank">Other projects on GitHub</a></li>
 		  </ul>
 		  <h1>Currently online websites</h1>
 		  <ul>
@@ -79,7 +79,7 @@ height: 140px;
       
       <footer>
         <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2013 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
+        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
       </footer>
     </div>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
