--- a/projects.html
+++ b/projects.html
@@ -1,88 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Stefano Sabatini Homepage</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Stefano Sabatini">
-     <link rel="shortcut icon" href="media/favicon.ico">
-
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-                                   
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-13244504-2']);
-  _gaq.push(['_setDomainName', 'stefanosabatini.eu']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-<style>
-.navbar-inverse .navbar-nav li a {
-line-height: 60px;
-}
-.img140 {
-height: 140px;
-}
-.center{text-align:center;}
-.row{padding:15px;}
-</style>
-  </head>
-
-  <body>
-    <div class="container">
-
-      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar brand" href="index.html"><img src="media/logo.png" style="height:60px;"/></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-           <li><a href="index.html">Home</a></li>
-           <li><a href="projects.html">Projects</a></li>
-           <li><a href="about.html">About me</a></li>
-          </ul>
-        </div>
-      </div>
-
+---
+title: Projects
+layout: default
+---
       <div class="row">
-		  <h1>Projects</h1>
+        <div class="col-lg-12">
+		  <h1>Projects and services</h1>
+		  <p><a href="open/index.html">Open Data</a></p>
+		  <p>On the Web</p>
 		  <ul>
-			  <li><a href="open/index.html">Open Data</a></li>
-			  <li><a href="open/nuraghe/index.html">Open Nuraghe</a></li>
-			  <li><a href="http://stefanosabatini.eu/GenoaPortStats/" target="_blank">Genoa Port Stats (new window)</a></li>
+			  <li><a href="http://nuraghe.org" target="_blank">Open Nuraghe</a></li>
+			  <li><a href="http://stefanosabatini.eu/GenoaPortStats/" target="_blank">Genoa Port Stats</a></li>
+			  <li><a href="http://su.openstreetmap.it/" target="_blank">su.openstreetmap.it</a></li>
 			  <li><a href="https://github.com/sabas/" target="_blank">Other projects on GitHub</a></li>
 		  </ul>
 		  <h1>Currently online websites</h1>
 		  <ul>
 			  <li><a href="#" onclick="javascript:alert('No need to click the link, you\'re already on it!')">This one :-)</a></li>
-			  <li><a href="http://www.carlodamico.com/">carlodamico.com</a></li>
-			  <li><a href="http://www.sarchittu.org/">sarchittu.org</a></li>
-			  <li><a href="http://map.genova.it/">map.genova.it</a></li>
+			  <li><a href="http://www.carlodamico.com/" target="_blank">carlodamico.com</a></li>
+			  <li><a href="http://www.sarchittu.org/" target="_blank">sarchittu.org</a></li>
+			  <li><a href="http://map.genova.it/" target="_blank">map.genova.it</a></li>
 		  </ul>
         </div>
-      
-      <footer>
-        <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
-      </footer>
-    </div>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="vendor/js/bootstrap.min.js"></script>	  
-  </body>
-</html>
+
+
