--- a/index.html
+++ b/index.html
@@ -1,86 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Stefano Sabatini Homepage</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Stefano Sabatini">
-     <link rel="shortcut icon" href="media/favicon.ico">
-
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-                                   
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-13244504-2']);
-  _gaq.push(['_setDomainName', 'stefanosabatini.eu']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-<style>
-.navbar-inverse .navbar-nav li a {
-line-height: 60px;
-}
-.img140 {
-height: 140px;
-}
-.center{text-align:center;}
-.row{padding:15px;}
-</style>
-  </head>
-
-  <body>
-    <div class="container">
-
-      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar brand" href="index.html"><img src="media/logo.png" style="height:60px;"/></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-           <li><a href="index.html">Home</a></li>
-           <li><a href="projects.html">Projects</a></li>
-           <li><a href="about.html">About me</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="row center">
-        <div class="col-lg-6">
-          <img class="img140" src="media/project.png">
+---
+title: Home Page
+layout: default
+---
+       <div class="row center">
+        <div class="col-lg-4">
+          <img class="img140" src="images/project.png">
           <h2>Projects</h2>
           <p>Docs, demos, and other things related to projects I'm involved.</p>
-          <p><a class="btn btn-default" href="projects.html">Enter &raquo;</a></p>
+          <p><a class="btn btn-default" href="projects/">Enter &raquo;</a></p>
         </div>
-        <div class="col-lg-6">
-          <img class="img140" src="media/contact.png">
+        <div class="col-lg-4">
+          <img class="img140" src="images/tools.png">
+          <h2>Tools</h2>
+          <p>Some tools I wrote.</p>
+          <p><a class="btn btn-default" href="tools/">Enter &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img class="img140" src="images/contact.png">
           <h2>About me</h2>
           <p>Me, my work, my curriculum and other info.</p>
-          <p><a class="btn btn-default" href="about.html">Read &raquo;</a></p>
+          <p><a class="btn btn-default" href="about/">Read &raquo;</a></p>
         </div>
       </div>
-      
-      <footer>
-        <p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-        <p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
-      </footer>
-    </div>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="vendor/js/bootstrap.min.js"></script>	  
-  </body>
-</html>
+
+
