--- a/tools/bboxcalculator.html
+++ b/tools/bboxcalculator.html
@@ -1,86 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<title>BBOX CALCULATOR</title>
-<link rel="stylesheet" href="../script/normalize.css" />
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+---
+title: Bbox Calculator
+layout: default
+---
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.js'></script>
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.css' rel='stylesheet' />
 
-	<link href="../vendor/css/bootstrap.min.css" rel="stylesheet">
-
-<script type="text/javascript">
-
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-13244504-2']);
-_gaq.push(['_setDomainName', 'stefanosabatini.eu']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-</script>
-
 <style>.row{font-family:monospace;}
-.navbar-inverse .navbar-nav li a {
-line-height: 60px;
-}
-.img140 {
-height: 140px;
-}
-.center{text-align:center;}
-.row{padding:15px;}
-
-#map{position:absolute;width:90%;min-height:400px;height:100%;max-height:600px;float:left;}
+.row{height:450px;}
+#map{position:absolute;width:90%;height:400px;float:left;}
 </style>
-</head>
-<body>
-
-<body>
-	<div class="container">
-
-	<div class="navbar navbar-inverse navbar-static-top" role="navigation">
-		<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a class="navbar brand" href="../index.html"><img src="../media/logo.png" style="height:60px;"/></a>
-		</div>
-		<div class="navbar-collapse collapse">
-		<ul class="nav navbar-nav">
-		<li><a href="../index.html">Home</a></li>
-		<li><a href="../projects.html">Projects</a></li>
-		<li><a href="../about.html">About me</a></li>
-		</ul>
-		</div>
-	</div>
-
 	<div class="row">
 		<div class="col-lg-4">
-
 			<h1>BBOX CALCULATOR</h1>
 			<p>Activate the tool (third button on map), then click and drag to draw a bounding box</p>
 			BBOX <input type="text" id="bbox" style="width:330px"/>
 			<br/>
 			SIZE <input type="text" id="aspect" style="width:330px"/>
-
-			</div>
+		</div>
 		<div class="col-lg-8">
 			<div id="map" style=""></div>
 			</div>
 	</div>
-</div>
 
 <script>
-//var bbox="8.910084,44.399142,8.944588,44.417781";
 function calcbbox(pippo){
 	var bbarr=bbox.split(",");
 
@@ -105,12 +49,8 @@ function calcbbox(pippo){
 	}
 }
 
-
-
-// create a map in the "map" div, set the view to a given place and zoom
 var map = L.map('map').setView([44, 9], 7);
 
-// add an OpenStreetMap tile layer
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 }).addTo(map);
@@ -195,5 +135,3 @@ function editdraw(e) {
 		map.on('draw:edited', editdraw);
 
 </script>
-</body>
-</html>
