--- a/tools/geojsontocsv.html
+++ b/tools/geojsontocsv.html
@@ -1,71 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<title>GeoJSON to DSV</title>
-<link rel="stylesheet" href="../vendor/css/normalize.css" type="text/css"/>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="http://code.jquerygeo.com/jquery.geo-1.0.0-b1.5.min.js"></script>
-<script type="text/javascript" src="../vendor/js/FileSaver.js"></script>
-
-    <link href="../vendor/css/bootstrap.min.css" rel="stylesheet">
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-13244504-2']);
-  _gaq.push(['_setDomainName', 'stefanosabatini.eu']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
+---
+title: GeoJson to DSV
+layout: default
+---
+<script type="text/javascript" src="http://code.jquerygeo.com/jquery.geo-1.0.0-b1.5.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/filesaver.js/0.2/FileSaver.min.js"></script>
 <style>
-.navbar-inverse .navbar-nav li a {
-line-height: 60px;
-}
-.img140 {
-height: 140px;
-}
-.center{text-align:center;}
-.row{padding:15px;}
 
-#map{max-height:400px; overflow-y:scroll;}
+#map{max-height:400px; overflow-y:scroll;overflow-x:hidden;}
 </style>
-  </head>
-
-  <body>
-    <div class="container">
-
-      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar brand" href="../index.html"><img src="../media/logo.png" style="height:60px;"/></a>
-        </div>
-        <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../projects.html">Projects</a></li>
-        <li><a href="../about.html">About me</a></li>
-        </ul>
-        </div>
-      </div>
 
       <div class="row">
         <div class="col-lg-6">
 <h1>GeoJSON to DSV</h1>
 <p>Generate a csv from a GeoJSON file with points: first two columns get the coordinates, then a key per column.</p>
 <p>In the box on the right you'll find the result, with Save button you download the file.</p>
+<p>If the geometry isn't a point, it will calculate the centroid before (and if it's a multipolygon, the centroid will be calculated onto its bounding box).</p>
 
 
 <form id="form" name="form">
@@ -79,13 +28,6 @@ height: 140px;
 <div class="col-lg-6" id="map">
 </div>
 </div>
-
-<footer>
-<p class="pull-right"><a onclick="$(this).click(function() {$('html,body').animate({scrollTop:0},800);});">Back to top</a></p>
-<p>&copy; 2014 Stefano Sabatini &middot; Images CC-BY Wikimedia Commons</p>
-</footer>
-</div>
-<script src="../vendor/js/bootstrap.min.js"></script>
 
 <script>
 var tempkeys=[];
@@ -115,6 +57,7 @@ function geo2dsv(json,sep)
         var geo=v.geometry;
         if (geo.type!='Point')
         {
+            if(geo.type=='MultiPolygon') geo=$.geo.polygonize($.geo.bbox(geo));
             geo=$.geo.centroid(geo);
         }
         geo=geo.coordinates;
@@ -191,5 +134,3 @@ function jssave()
     saveAs(blob, "map.csv");
 }
 </script>
-</body>
-</html>
