--- a/tools.html
+++ b/tools.html
@@ -8,6 +8,7 @@ layout: default
             <ul>
                 <li><a href="bboxcalculator/">BBOX Calculator</a>: to get bounding boxes and their size from a map</li>
                 <li><a href="geojsontocsv/">GeoJSON to DSV</a>: convert a GeoJSON in CSV/TSV</li>
+                <li><a href="findcoords/">Find Coordinates</a>: just click to see the coordinates</li>
             </ul>
         </div>
       </div>
