Cambiato cursore in findcoords

--- a/tools/findcoords.html
+++ b/tools/findcoords.html
@@ -1,5 +1,5 @@
 ---
-title: Bbox Calculator
+title: Find Coordinates
 layout: default
 ---
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
@@ -10,7 +10,13 @@ layout: default
 
 <style>.row{font-family:monospace;}
 .row{height:450px;}
-#map{position:absolute;width:90%;height:400px;float:left;}
+#map{
+position:absolute;
+width:90%;
+height:400px;
+float:left;
+cursor: crosshair !important;
+}
 </style>
 	<div class="row">
 		<div class="col-lg-4">
