--- a/tools/bboxcalculator.html
+++ b/tools/bboxcalculator.html
@@ -8,15 +8,24 @@ layout: default
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.css' rel='stylesheet' />
 
 <style>.row{font-family:monospace;}
-.row{height:450px;}
+.row.map{height:450px;}
 #map{position:absolute;width:90%;height:400px;float:left;}
 </style>
-	<div class="row">
+<div class="row">
+    <div class="col-lg-4">
+        <h1>BBOX CALCULATOR</h1>
+    </div>
+    <div class="col-lg-8">
+    <p>Activate the tool (third button on map), then click and drag to draw a bounding box</p>
+    </div>
+</div>
+	<div class="row map">
 		<div class="col-lg-4">
-			<h1>BBOX CALCULATOR</h1>
-			<p>Activate the tool (third button on map), then click and drag to draw a bounding box</p>
-
-			SIZE (max 1280x720) <input type="text" id="aspect" style="width:330px"/>
+			DIMENSION (m) <input type="text" id="radius" style="width:330px"/>
+			<br/>
+			ASPECT RATIO <input type="text" id="ratio" style="width:330px"/>
+			<br/>
+			PIXEL SIZE (max 1280x720) <input type="text" id="aspect" style="width:330px"/>
 			<br/>
 			BBOX <input type="text" id="bbox" style="width:330px"/>
 			<br/>
@@ -29,34 +38,10 @@ layout: default
 		</div>
 		<div class="col-lg-8">
 			<div id="map" style=""></div>
-			</div>
+		</div>
 	</div>
 
 <script>
-function calcbbox(bbox){
-	var bbarr=bbox.split(",");
-
-	var max_width=1280;
-	var max_height=720;
-	//a 44°
-	var lat_metri=111112.21066641241;
-	var lon_metri=80206.16339921234;
-
-	var dw=(bbarr[2]-bbarr[0])*lon_metri;
-	var dh=(bbarr[3]-bbarr[1])*lat_metri;
-
-	//calcolo aspect ratio
-	var aspect=dw/dh;
-	var stdaspect=max_width/max_height;
-
-	if(aspect>stdaspect){
-	document.getElementById("aspect").value=max_width+" "+(max_width/dw*dh).toFixed(0);
-	}
-	else{
-	document.getElementById("aspect").value=(max_height/dh*dw).toFixed(0)+" "+max_height;
-	}
-}
-
 var map = L.map('map').setView([44, 9], 7);
 
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
@@ -91,7 +76,7 @@ function editdraw(e) {
     });
 }
 
-		function handledraw(layer) {
+function handledraw(layer) {
 			var pointarr=layer.getLatLngs();
 
 			var minlat=-90;
@@ -124,15 +109,30 @@ function editdraw(e) {
 
 			var max_width=1280;
 			var max_height=720;
+            /*
 			//a 44°
 			var lat_metri=111112.21066641241;
 			var lon_metri=80206.16339921234;
 
 			var dw=(bbarr[2]-bbarr[0])*lon_metri;
 			var dh=(bbarr[3]-bbarr[1])*lat_metri;
+            */
+            //diagonale haversine(minlat,minlon,maxlat,maxlon);
+            var dw=haversine(minlat,minlon,minlat,maxlon);
+            var dh=haversine(minlat,minlon,maxlat,minlon);
+
+            var dw2=haversine(maxlat,minlon,maxlat,maxlon);
+            var dh2=haversine(minlat,maxlon,maxlat,maxlon);
+            
+            var haver_width=(dw+dw2)/2;
+            var haver_height=(dh+dh2)/2;
+
+            document.getElementById("radius").value=haver_width.toFixed(0)+' x '+haver_height.toFixed(0);
 
 			//calcolo aspect ratio
-			var aspect=dw/dh;
+			var aspect=haver_width/haver_height;
+            document.getElementById("ratio").value=aspect.toFixed(3);
+
 			var stdaspect=max_width/max_height;
 
 			if(aspect>stdaspect){
@@ -142,10 +142,43 @@ function editdraw(e) {
 			document.getElementById("aspect").value=(max_height/dh*dw).toFixed(0)+"x"+max_height;
 			}
 			/* fine calcolo */
-		}
+}
 
 		map.on('draw:created', createdraw);
 
 		map.on('draw:edited', editdraw);
 
+    var inputs = document.getElementsByTagName('input');
+
+    for (var i=0, len=inputs.length; i<len; i++){
+        if (inputs[i].type == 'text'){
+            inputs[i].onclick = function(){
+                this.select();
+            };
+        }
+    }
+
+if (typeof(Number.prototype.toRad) === "undefined") {
+  Number.prototype.toRad = function() {
+    return this * Math.PI / 180;
+  }
+}
+
+function haversine(lat1,lon1,lat2,lon2)
+{
+    var R = 6372797.560856;
+ 
+    var dlat = (lat2-lat1).toRad();
+    var dlon = (lon2-lon1).toRad();
+ 
+	var lonh=Math.sin(dlon*0.5);
+	lonh*=lonh;
+	
+	var lath=Math.sin(dlat*0.5);
+	lath*=lath;
+	
+	var tmp= Math.cos(lat1.toRad())*Math.cos(lat2.toRad());
+ 
+    return 2*R*Math.asin(Math.sqrt(lath+tmp*lonh));
+}
 </script>
