--- a/tools/bboxcalculator.html
+++ b/tools/bboxcalculator.html
@@ -35,6 +35,8 @@ layout: default
 			<br/>
 			JS BBOX INVERTED <input type="text" id="jsbboxinv" style="width:330px"/>
 			<br/>
+      POLY BBOX <input type="text" id="polybbox" style="width:330px"/>
+      <br/>
 		</div>
 		<div class="col-lg-8">
 			<div id="map" style=""></div>
@@ -93,14 +95,22 @@ function handledraw(layer) {
 			if(p.lng<maxlon)maxlon=p.lng;
 			}
 
-			var bbstring=minlon.toFixed(6)+","+minlat.toFixed(6)+","+maxlon.toFixed(6)+","+maxlat.toFixed(6);
+      var fixMinLon=minlon.toFixed(6);
+      var fixMinLat=minlat.toFixed(6);
+      var fixMaxLon=maxlon.toFixed(6);
+      var fixMaxLat=maxlat.toFixed(6);
+
+			var bbstring=fixMinLon+","+fixMinLat+","+fixMaxLon+","+fixMaxLat;
 			document.getElementById("bbox").value=bbstring;
-			var bbinvstring=minlat.toFixed(6)+","+minlon.toFixed(6)+","+maxlat.toFixed(6)+","+maxlon.toFixed(6);
+			var bbinvstring=fixMinLat+","+fixMinLon+","+fixMaxLat+","+fixMaxLon;
 			document.getElementById("bboxinv").value=bbinvstring;
-			var jsbbstring="[["+minlon.toFixed(6)+","+minlat.toFixed(6)+"],["+maxlon.toFixed(6)+","+maxlat.toFixed(6)+"]]";
+			var jsbbstring="[["+fixMinLon+","+fixMinLat+"],["+fixMaxLon+","+fixMaxLat+"]]";
 			document.getElementById("jsbbox").value=jsbbstring;
-			var jsbbinvstring="[["+minlat.toFixed(6)+","+minlon.toFixed(6)+"],["+maxlat.toFixed(6)+","+maxlon.toFixed(6)+"]]";
+			var jsbbinvstring="[["+fixMinLat+","+fixMinLon+"],["+fixMaxLat+","+fixMaxLon+"]]";
 			document.getElementById("jsbboxinv").value=jsbbinvstring;
+
+      var polybbox="[["+fixMinLon+","+fixMaxLat+"],["+fixMaxLon+","+fixMaxLat+"],["+fixMaxLon+","+fixMinLat+"],["+fixMinLon+","+fixMinLat+"]]";
+      document.getElementById("polybbox").value=polybbox;
 
 			drawnItems.addLayer(layer);
 
@@ -109,21 +119,14 @@ function handledraw(layer) {
 
 			var max_width=1280;
 			var max_height=720;
-            /*
-			//a 44°
-			var lat_metri=111112.21066641241;
-			var lon_metri=80206.16339921234;
 
-			var dw=(bbarr[2]-bbarr[0])*lon_metri;
-			var dh=(bbarr[3]-bbarr[1])*lat_metri;
-            */
             //diagonale haversine(minlat,minlon,maxlat,maxlon);
             var dw=haversine(minlat,minlon,minlat,maxlon);
             var dh=haversine(minlat,minlon,maxlat,minlon);
 
             var dw2=haversine(maxlat,minlon,maxlat,maxlon);
             var dh2=haversine(minlat,maxlon,maxlat,maxlon);
-            
+
             var haver_width=(dw+dw2)/2;
             var haver_height=(dh+dh2)/2;
 
@@ -167,18 +170,18 @@ if (typeof(Number.prototype.toRad) === "undefined") {
 function haversine(lat1,lon1,lat2,lon2)
 {
     var R = 6372797.560856;
- 
+
     var dlat = (lat2-lat1).toRad();
     var dlon = (lon2-lon1).toRad();
- 
+
 	var lonh=Math.sin(dlon*0.5);
 	lonh*=lonh;
-	
+
 	var lath=Math.sin(dlat*0.5);
 	lath*=lath;
-	
+
 	var tmp= Math.cos(lat1.toRad())*Math.cos(lat2.toRad());
- 
+
     return 2*R*Math.asin(Math.sqrt(lath+tmp*lonh));
 }
 </script>
