--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ title: Home Page
 layout: default
 ---
        <div class="row center">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img140" src="images/project.png">
           <h2>Projects</h2>
           <p>Docs, demos, and other things related to projects I'm involved.</p>
           <p><a class="btn btn-default" href="projects/">Enter &raquo;</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img140" src="images/tools.png">
           <h2>Tools</h2>
           <p>Some tools I wrote.</p>
           <p><a class="btn btn-default" href="tools/">Enter &raquo;</a></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <img class="img140" src="images/contact.png">
           <h2>About me</h2>
           <p>Me, my work, my curriculum and other info.</p>
