--- a/projects/open.html
+++ b/projects/open.html
@@ -7,13 +7,13 @@ layout: default
 <h1>Open</h1>
 <p>Here are some demo projects involving open data.</p>
       <div class="row center">
-        <div class="col-lg-6">
+        <div class="col-sm-6">
           <img class="img140" src="carsharing/carsharing.png">
           <h2>Car Sharing</h2>
           <p>Obtained car sharing parking positions and redistributed as open data.</p>
           <p><a class="btn btn-default" href="carsharing/index.html">Go &raquo;</a></p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-sm-6">
           <img class="img140" src="retegratuita/rete.png">
           <h2>Rete Gratuita</h2>
           <p>Obtained wifi hotspots positions and redistributed as open data.</p>
