--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
  
 <h2>Curriculum</h2>
 
-<p>My Europass curriculum can be seen via <a href="docs/europass.pdf">this link</a>, my Linkedin profile is <a href="http://it.linkedin.com/in/stefanosabatini/">this way</a>.</p>
+<p>My Europass curriculum can be seen via <a href="{{site.baseurl}}/docs/europass.pdf">this link</a>, my Linkedin profile is <a href="http://it.linkedin.com/in/stefanosabatini/">this way</a>.</p>
 
 <p>I am employed as BPS at <a href="http://www.coscon.it/">Coscon Italy SRL</a>.<p>
 </div>
