--- a/tools/findcoords.html
+++ b/tools/findcoords.html
@@ -6,8 +6,8 @@ layout: default
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.js'></script>
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.css' rel='stylesheet' />
-<script src='../js/sexagesimal.js'></script>
-<script src='../js/openlocationcode.js'></script>
+<script src='{{site.baseurl}}/js/sexagesimal.js'></script>
+<script src='{{site.baseurl}}/js/openlocationcode.js'></script>
 
 <style>.row{font-family:monospace;}
 .row{height:450px;}
