Add tiles calculator, add search to find coords

--- a/tools.html
+++ b/tools.html
@@ -9,6 +9,7 @@ layout: default
                 <li><a href="bboxcalculator/">BBOX Calculator</a>: to get bounding boxes and their size from a map</li>
                 <li><a href="geojsontocsv/">GeoJSON to DSV</a>: convert a GeoJSON in CSV/TSV</li>
                 <li><a href="findcoords/">Find Coordinates</a>: just click to see the coordinates</li>
+                <li><a href="tilescalc/">Tiles Calculator</a>: switch between coordinates and tilenames</li>
             </ul>
         </div>
       </div>
