--- a/tools/findcoords.html
+++ b/tools/findcoords.html
@@ -2,12 +2,15 @@
 title: Find Coordinates
 layout: default
 ---
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.js'></script>
-<link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.2/leaflet.draw.css' rel='stylesheet' />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.js'></script>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.css' rel='stylesheet' />
 <script src='{{site.baseurl}}/js/sexagesimal.js'></script>
 <script src='{{site.baseurl}}/js/openlocationcode.js'></script>
+
+<link href='{{site.baseurl}}/css/leaflet-search.min.css' rel='stylesheet' />
+<script src='{{site.baseurl}}/js/leaflet-search.min.js'></script>
 
 <style>.row{font-family:monospace;}
 .row{height:450px;}
@@ -49,11 +52,11 @@ function pad (str, max) {
 }
 
 function locodeFormat(lat,lon){
-var dlat=coordToDMS(lat,'lat');
-var dlon=coordToDMS(lon,'lon');
-slat=pad(dlat.d.toString(),2)+pad(dlat.m.toString(),2)+dlat.dir;
-slon=pad(dlon.d.toString(),3)+pad(dlon.m.toString(),2)+dlon.dir;
-return slat+" "+slon;
+    var dlat=coordToDMS(lat,'lat');
+    var dlon=coordToDMS(lon,'lon');
+    slat=pad(dlat.d.toString(),2)+pad(dlat.m.toString(),2)+dlat.dir;
+    slon=pad(dlon.d.toString(),3)+pad(dlon.m.toString(),2)+dlon.dir;
+    return slat+" "+slon;
 }
 
 function coordToDMS(x,dim){
@@ -83,22 +86,34 @@ function writeCoord(e){
 	document.getElementById('locode').value=locodeFormat(ll.lat, ll.lng);
 }
 
-var map = L.map('map').setView([44, 9], 7);
+    var map = L.map('map').setView([44, 9], 7);
 
-var osmTile= L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-}).addTo(map);
- var realVista = L.tileLayer.wms("http://213.215.135.196/reflector/open/service?", {
-		layers: 'rv1',
-		format: 'image/jpeg',attribution: 'RealVista1.0 WMS OPEN di <a href="http://www.realvista.it">e-GEOS SpA</a>'
-	});
-var layerControl = new L.Control.Layers({
-		'OSM': osmTile,
-		'Satellite': realVista
-	}, null, {position: 'topright'});
+    var osmTile= L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+     var realVista = L.tileLayer.wms("http://213.215.135.196/reflector/open/service?", {
+		    layers: 'rv1',
+		    format: 'image/jpeg',attribution: 'RealVista1.0 WMS OPEN di <a href="http://www.realvista.it">e-GEOS SpA</a>'
+	    });
+    var layerControl = new L.Control.Layers({
+		    'OSM': osmTile,
+		    'Satellite': realVista
+	    }, null, {position: 'topright'});
 
-layerControl.addTo(map);
+    layerControl.addTo(map);
 
-	map.on('click', writeCoord);
+    map.on('click', writeCoord);
 
+	map.addControl( new L.Control.Search({
+			url: 'http://nominatim.openstreetmap.org/search?format=json&q={s}',
+			jsonpParam: 'json_callback',
+			propertyName: 'display_name',
+			propertyLoc: ['lat','lon'],
+			circleLocation: false,
+			markerLocation: false,			
+			autoType: false,
+			autoCollapse: true,
+			minLength: 3,
+			zoom:15
+		}) );
 </script>
