--- a/tools/findcoords.html
+++ b/tools/findcoords.html
@@ -110,7 +110,7 @@ function writeCoord(e){
 			propertyName: 'display_name',
 			propertyLoc: ['lat','lon'],
 			circleLocation: false,
-			markerLocation: false,			
+			markerLocation: true,			
 			autoType: false,
 			autoCollapse: true,
 			minLength: 3,
