--- a/tools/geojsontocsv.html
+++ b/tools/geojsontocsv.html
@@ -2,8 +2,8 @@
 title: GeoJson to DSV
 layout: default
 ---
-<script type="text/javascript" src="http://code.jquerygeo.com/jquery.geo-1.0.0-b1.5.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/filesaver.js/0.2/FileSaver.min.js"></script>
+<script type="text/javascript" src="http://code.jquerygeo.com/jquery.geo-1.0.0-rc1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/filesaver.js/1.3.3/FileSaver.min.js"></script>
 <style>
 
 #map{max-height:400px; overflow-y:scroll;overflow-x:hidden;}
